hphp/test/zend/good/ext/mbstring/tests/mb_ereg_search_pos.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded('mbstring')) die('skip mbstring not enabled');
}
