hphp/test/zend/bad/ext/intl/tests/dateformat_formatObject_error.php.skipif
<?php
if (!extension_loaded('intl'))
	die('skip intl extension not enabled');